# netero

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  justfile  treefmt.toml
docs/lang/: readme.es.md
src/: core.rs  main.rs  tasks.rs
src/core/: codestral.rs  config.rs  interface.rs  interfaz.rs  mod.rs  router.rs  trace.rs  types.rs
src/task/commit/: prompt.ron  prompt.rs
src/task/commit/prompts/: diff_example.txt  instruction.txt  skeleton.txt
src/tasks/: commit.rs  message.rs  simple_chat.rs
src/tasks/chat/: prompt.rs  task.rs
src/tasks/commit/: task.rs
src/tasks/commit/prompts/: convention.txt  instruction.txt  skeleton.txt
src/tasks/message/: task.rs
src/tasks/pipeline/: task.rs
src/tasks/simple_chat/: task.rs
src/utils/: mod.rs  mod_test.rs
