[package]
name = "netero"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "netero"
path = "src/main.rs"

[[bin]]
name = "netero-dev"
path = "src/main.rs"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
termimad = "0.34.1"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
terminal_size = "0.4.3"
